# Etch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROJECT_INDEX.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: nginx.conf
docs/: RELEASING.md  eu-ai-act-prospects.md  licensing-model.md  prospect-pipeline.md
etch/: __init__.py  api.py  auth.py  c2pa.py  chain.py  chain_manager.py  db.py  models.py  records_api.py  sdk.py  server.py
site/: index.html
tests/: test_api.py  test_batch_api.py  test_c2pa.py  test_chain.py  test_records_api.py  test_sdk.py
