[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etch"
version = "0.1.0"
description = "Content provenance on a tamper-evident Merkle chain — register, verify, and prove content existed at a point in time."
readme = "README.md"
license = { text = "FSL-1.1-Apache-2.0" }
requires-python = ">=3.11"
keywords = ["provenance", "merkle", "content-authenticity", "tamper-evident", "c2pa"]
authors = [{ name = "Etch Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/maco144/Etch"
Repository = "https://github.com/maco144/Etch"
Issues = "https://github.com/maco144/Etch/issues"
Changelog = "https://github.com/maco144/Etch/blob/main/CHANGELOG.md"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]
all = ["etch[postgres,dev]"]

[tool.hatch.build.targets.wheel]
packages = ["etch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
